2007-12-06  D. Goel  <deego3@gmail.com>

	* progmodes/vhdl-mode.el (vhdl-template-modify): Ditto.

	* progmodes/idlw-shell.el (idlwave-shell-send-command): Ditto.
	(idlwave-shell-display-line): Ditto.

	* progmodes/ada-xref.el (ada-find-file): Ditto.
	(ada-get-all-references): Ditto.
	(ada-xref-find-in-modified-ali): Ditto.
	(ada-find-in-src-path): Ditto.

	* net/trampver.el (x): Ditto.

	* mail/uce.el (uce-reply-to-uce): Ditto.

	* mail/rmailout.el (rmail-output): Ditto.

	* mail/feedmail.el (feedmail-dump-message-to-queue): Ditto.

	* whitespace.el (whitespace-write-file-hook): Ditto.

	* wdired.el (wdired-check-kill-buffer): Ditto.

	* vc.el (vc-update): Ditto.

	* vc-mcvs.el (vc-mcvs-checkin): Ditto.

	* vc-cvs.el (vc-cvs-checkin): Ditto.

	* man.el (Man-bgproc-sentinel): Ditto.
	(Man-goto-see-also-section): Ditto.

	* ibuffer.el (ibuffer-current-buffer): Ditto.

	* dired.el (dired-move-to-end-of-filename): Ditto.

	* bindings.el (complete-symbol): Ditto.

	* allout.el (allout-write-file-hook-handler): Fix buggy call(s) to `error'.

2007-12-06  D. Goel  <deego3@gmail.com>


	* textmodes/org-publish.el (org-publish-file): Fix buggy call(s) to `error'.
	(org-publish-current-project): Ditto.
	* textmodes/reftex-parse.el (reftex-short-context): Ditto.
	(reftex-short-context): Ditto.
	* textmodes/texinfmt.el: Ditto.



2007-12-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* doc-view.el (doc-view-dvi->pdf-sentinel)
	(doc-view-pdf/ps->png-sentinel, doc-view-pdf->txt-sentinel)
	(doc-view-ps->pdf-sentinel, doc-view-display): Don't change buffer
	within a sentinel or timer.
	(doc-view-display): Don't try to display before the requested page
	is available, unless told to do so explicitly.
	(doc-view-pdf/ps->png-sentinel, doc-view-initiate-display):
	Force display even if the requested page is not available.

2007-12-06  Richard Stallman  <rms@gnu.org>

	* help-fns.el (describe-function-1): Call ad-get-advice-info
	only on symbols.
